fix(post): wrap code #44

--- a/components/blog/PostBody.module.css
+++ b/components/blog/PostBody.module.css
@@ -38,6 +38,10 @@
     @apply text-[#727272] text-sm;
 }
 
+.content code {
+    overflow-wrap: break-word;
+}
+
 .content h2,
 .content h3 {
     @apply text-white font-bold leading-snug;
